html, body {     max-width: 100%;     overflow-x: hidden; }PREVENT HORIZONTAL OVERFLOW!!!

--- a/styles/charadex.css
+++ b/styles/charadex.css
@@ -241,6 +241,12 @@ a:active {
   text-decoration: none;
 }
 
+
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 /* ============================================================= */
 /* Navbar
 /* ============================================================= */
